<resources>
    <string name="app_name">The CarpeDiem</string>
    <string name="read">READ</string>
    <string name="inspiration">Inspiration</string>
    <string name="description">Description</string>
    <string name="home">Home</string>
    <string name="info">info</string>
    <string name="trending">New</string>
    <string name="notifications">Notifications</string>
    <string name="search">search</string>
    <string name="settings">settings</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="oneliner">OneLiner</string>
    <string name="live">Live</string>
    <string name="about">About</string>
    <string name="share">Share</string>
    <string name="contactus">ContactUs</string>
    <string name="exit">Exit</string>
    <string name="quotes">Quotes</string>
    <string name="stories">Stories</string>
    <string name="articles">Articles</string>
    <string name="arti">ARTICLES</string>
    <string name="microtale">MicroTale</string>
    <string name="poetry">Poetry</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- Mrinal adds string values for Bold Italics and Text Style-->
    <string name="bold">B</string>
    <string name="italics">I</string>
    <string name="text_style">T</string>

    <string name="lorem_ipsum">  Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries,but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries,Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries,Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries,Ipsum. </string>
    <string name="writing_title">Title </string>
</resources>
