<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorAccent"
        android:minHeight="?actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Dark">
    </android.support.v7.widget.Toolbar>

    <android.support.design.widget.TabLayout
        android:id="@+id/tablayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent"
        app:tabSelectedTextColor="#000"
        app:tabGravity="center"
        app:tabTextColor="@color/darker_grey">

        <android.support.design.widget.TabItem
            android:id="@+id/tabquotes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/quotes"/>

        <android.support.design.widget.TabItem
            android:id="@+id/tabstories"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/stories"/>

        <android.support.design.widget.TabItem
            android:id="@+id/tabArticles"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/articles"/>

        <android.support.design.widget.TabItem
            android:id="@+id/tabPoetry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/poetry"/>

    </android.support.design.widget.TabLayout>

    <android.support.v4.view.ViewPager
        android:id="@+id/viewPager"
        android:layout_marginTop="-10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </android.support.v4.view.ViewPager>

    <android.support.design.widget.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:layout_width="match_parent"
        android:layout_alignParentBottom="true"
        app:menu="@menu/menuother"/>
</RelativeLayout>