<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingStart="16dp"
    android:paddingTop="20dp"
    android:paddingEnd="16dp"
    android:weightSum="800"
    tools:context=".WritingActivity">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingStart="8dp"
        android:paddingTop="16dp"
        android:paddingEnd="8dp"
        android:paddingBottom="16dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <include layout="@layout/next_previous_button"/>

            <android.support.v7.widget.CardView
                android:id="@+id/titleCardView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/NextAndPreviousLayout"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="16dp">

                <RelativeLayout
                    android:id="@+id/titleRelativeLayout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/titleTextView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Title : "
                        android:textStyle="bold"/>

                    <EditText
                        android:id="@+id/titleEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/titleTextView"
                        android:ems="10"
                        android:hint="Write your Title Here!"
                        android:inputType="textPersonName" />

                    <Button
                        android:id="@+id/BoldButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/titleEditText"
                        android:text="@string/bold" />

                    <Button
                        android:id="@+id/ItalicButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/titleEditText"
                        android:layout_toRightOf="@id/BoldButton"
                        android:text="@string/italics" />

                    <Button
                        android:id="@+id/textStylebutton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/titleEditText"
                        android:layout_toRightOf="@id/ItalicButton"
                        android:text="@string/text_style" />
                </RelativeLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/contentCardView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/titleCardView"
                android:paddingStart="16dp"
                android:paddingTop="16dp"
                android:paddingEnd="16dp"
                android:paddingBottom="16dp" >

                <LinearLayout
                    android:id="@+id/LinearLayoutcontentBoldItalicts"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="bottom"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/boldButton2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0"
                        android:text="@string/bold" />

                    <Button
                        android:id="@+id/italicButton2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0"
                        android:text="@string/italics" />

                    <Button
                        android:id="@+id/textStylebutton2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0"
                        android:text="@string/text_style" />

                </LinearLayout>

                <RelativeLayout
                    android:id="@+id/contentRelativeLayout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="top">

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/textInputLayout"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="fill">

                        <android.support.design.widget.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="fill"
                            android:hint="Write your Thought Here!"
                            android:inputType="textWebEditText" />

                    </android.support.design.widget.TextInputLayout>

                </RelativeLayout>


            </android.support.v7.widget.CardView>

        </RelativeLayout>

    </android.support.v7.widget.CardView>
</LinearLayout>


